feat: Implement infinite scroll for paper list with compact and card views
- Added a new template for infinite scroll results in `paper_list_infinite_results.html`.
- Integrated HTMX for loading more papers on scroll.
- Enhanced the display of paper details including title, authors, year, and tags.
- Created a new partial for displaying query results in `query_and_thinking.html`.
- Updated the uploaded papers table in `uploaded_papers_rows.html` to include filtering and status badges.
- Added a basic password reset email template.
- Developed a background task in `task.py` for processing papers, including embedding generation, indexing, tag extraction, summary generation, and citation matching.
- Implemented error handling and status updates for paper processing tasks.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,16 @@
 
 
 services:
+  # --- 1. DEFINE REDIS FIRST ---
+  # This is the service definition that was missing
+  redis:
+    image: "redis:alpine"
+    container_name: paperrepo_redis
+    expose:
+      - "6379"
+    restart: unless-stopped
+
+  # --- 2. YOUR WEB APP (UPDATED) ---
   web:
     build: .
     container_name: paperrepo_app
@@ -11,7 +21,24 @@ services:
       - .:/app
     expose:
       - "8000"
+    restart: unless-stopped
+    depends_on:
+      - redis  # This line needs the 'redis' service above to exist
 
+  # --- 3. THE NEW CELERY WORKER ---
+  worker:
+    build: .
+    container_name: paperrepo_worker
+    command: celery -A paperrepo worker -l info -c 4
+    env_file:
+      - .env
+    volumes:
+      - .:/app
+    restart: unless-stopped
+    depends_on:
+      - redis  # This line also needs the 'redis' service above to exist
+
+  # --- 4. YOUR NGINX SERVICE ---
   nginx:
     image: nginx:latest
     container_name: paperrepo_nginx
