--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 # Core Django packages
+--extra-index-url https://download.pytorch.org/whl/cpu
 Django==5.2.4
 django-allauth==65.13.0
 django-crispy-forms
 crispy-tailwind
 psycopg2-binary
-torch torchvision --index-url https://download.pytorch.org/whl/cpu
+torch==2.2.1+cpu
 sentence-transformers
 django-htmx
 pgvector
