--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ django-allauth==65.13.0
 django-crispy-forms
 crispy-tailwind
 psycopg2-binary
-torch==2.2.1+cpu
+torch --index-url https://download.pytorch.org/whl/cpu
+torchvision --index-url https://download.pytorch.org/whl/cpu
 sentence-transformers
 django-htmx
 pgvector
